files/gatekeeper/ban-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBanHostNetwork
metadata:
  name: ban-hostnetwork
  annotations:
    rulehub.id: ban.hostnetwork
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
