files/gatekeeper/block-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockHostPath
metadata:
  name: block-hostpath
  annotations:
    rulehub.id: block.hostpath
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
