files/gatekeeper/disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: disallow-latest
  annotations:
    rulehub.id: disallow.latest
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
