files/gatekeeper/limit-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLimitCapabilities
metadata:
  name: limit-capabilities
  annotations:
    rulehub.id: limit.capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
