files/gatekeeper/no-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPrivileged
metadata:
  name: no-privileged
  annotations:
    rulehub.id: no.privileged
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
