files/gatekeeper/require-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResources
metadata:
  name: require-resources
  annotations:
    rulehub.id: require.resources
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
